src/test/resources/org/nest/nestml/_cocos/valid/codeAfterReturn.nestml
neuron Dummy:
  function f() integer:
    a integer = 15
    a = a + 12
    return 1
  end
end