src/test/resources/org/nest/nestml/_cocos/invalid/codeAfterReturn.nestml
neuron Dummy:
  function f() integer:
    a integer = 15
    return a
    a = a + 12
  end
end